--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Login to Docker, start the script
         uses: docker/login-action@v1 
         with:
-          username: ${{ sectrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push the image to Docker Hub
         uses: docker/build-push-action@v2 
